--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "client",
+  "name": "npm-server",
   "authors": "Brian Besaw, Ben Malin, Brad Garner",
   "version": "0.1.0",
-  "description": "npmatch",
-  "homepage": "https://arcane-journey-50164.herokuapp.com/client",
+  "description": "npm-server",
   "engines": {
     "node": "8.2.1"
   },
@@ -20,7 +19,6 @@
     "deep-assign": "^2.0.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
-    "http-proxy-middleware": "^0.17.4",
     "knex": "^0.13.0",
     "moment": "^2.19.4",
     "morgan": "^1.9.0",
@@ -31,17 +29,6 @@
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
     "pg": "^7.3.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
-    "react-widgets": "^4.1.1",
-    "react-widgets-moment": "^4.0.4",
-    "redux": "^3.7.2",
-    "redux-form": "^7.2.0",
-    "redux-thunk": "^2.2.0",
     "should": "^13.1.3",
     "tap": "^11.0.0",
     "tape": "^4.8.0",
@@ -49,27 +36,18 @@
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "run-p dev:client dev:server",
-    "dev:client": "cd client && npm start",
-    "dev:server": "nodemon ./server/server.js",
-    "build": "run-p build:client build:server",
-    "build:client": "cd client && npm install",
-    "build:server": "--ignore node_modules,build --out-dir server/build",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm run build",
-    "test": "mocha --colors server/test/*.test.js",
-    "coverage": "nyc mocha --colors  server/test/*test.js",
+    "start": "nodemon server.js",
+    "dev": "nodemon server.js",
+    "test": "mocha --colors test/*.test.js",
+    "coverage": "nyc mocha --colors test/*test.js",
     "nyc": "test",
-    "cover": "nodemon --exec nyc --reporter=lcov --reporter=text-summary mocha test/setup.test.js */*.test.js",
-    "heroku": "node index.js",
-    "travis": "mocha server/test/*test.js",
-    "brian": "test"
+    "cover": "nodemon --exec nyc --reporter=lcov --reporter=text-summary mocha test/*.test.js",
+    "travis": "mocha test/*test.js"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "mocha": "^3.5.3",
-    "nodemon": "^1.12.1",
     "nyc": "^11.2.1"
   }
 }
