--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "main": "/server/server.js",
   "private": true,
   "dependencies": {
+    "async": "^2.6.0",
     "bcrypt": "^1.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
