--- a/package.json
+++ b/package.json
@@ -10,31 +10,19 @@
   "main": "/server/server.js",
   "private": true,
   "dependencies": {
-    "async": "^2.6.0",
-    "bcrypt": "^1.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
-    "case-sensitive-paths-webpack-plugin": "^2.1.1",
-    "chai-spies": "^0.7.1",
     "cors": "^2.8.4",
-    "deep-assign": "^2.0.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.0",
     "knex": "^0.13.0",
-    "moment": "^2.19.4",
     "morgan": "^1.9.0",
     "nodemon": "^1.12.1",
-    "npm-run-all": "^4.1.2",
     "passport": "^0.4.0",
-    "passport-http": "^0.3.0",
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^7.3.0",
-    "should": "^13.1.3",
-    "tap": "^11.0.0",
-    "tape": "^4.8.0",
-    "test-console": "^1.1.0",
-    "whatwg-fetch": "^2.0.3"
+    "pg": "^7.3.0"
   },
   "scripts": {
     "start": "nodemon server.js",
